fixed alignment

--- a/src/home/components/top-section/index.scoped.sass
+++ b/src/home/components/top-section/index.scoped.sass
@@ -86,8 +86,7 @@ $actionColor: #008EC4
 $actionColorHover: #00C7DF
 
 .action
-  display: flex
-  align-items: center
+  align-self: flex-start
   color: $actionColor
   transition: color 200ms
   cursor: pointer
